--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -29,7 +29,6 @@ a:hover {
 }
 
 #notice {
-  //float:left;
   width: 300px;
   margin: 10px auto 10px auto;
   padding: 5px 10px 5px 10px;
@@ -45,18 +44,23 @@ a:hover {
 }
 
 .field_with_errors {
-  float:left;
   padding: 1px;
   background-color: red;
   display: table;
 }
 
+#input_bp{
+  .field_with_errors {
+    float: left;
+  }
+}
+
 #errorExplanation {
-  float: left;
   border: 2px solid red;
-  padding: 5px 0px 5px 0px;
   margin: 10px 0px 0px 0px;
+  padding: 0px 0px 10px 0px;
   background-color: #f0f0f0;
+  max-width: 400px;
   h2 {
     text-align: left;
     font-weight: bold;
@@ -65,9 +69,9 @@ a:hover {
     color: #fff;
   }
   ul {
-    float:left;
     font-size: 12px;
     list-style: square;
+    padding: 10px 0px 0px 30px;
   }
 }
 
