--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,34 +1,46 @@
 <div id='main'>
-	<div id='change_pwd'>
-		<div id='title'>
-			Change your password
+	
+	<div id='strip1'>
+		<div id='strip1_content'>
+			<% if !user_signed_in? %>
+				<h2>The best blood pressure treatment</h2>
+				<h3>FREE advice from UK GPs.</h3>
+				<h4>Online. Anytime.</h4>
+			<% end %>
 		</div>
+	</div>
+	
+	<div id='strip5'>
+		<div id='strip5_content'>
+			<div id='nav_form'>
+				
+				<h4>Change your password</h4>
+				
+				<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+				<%= f.hidden_field :reset_password_token %>
+				<table>
+					<tr>
+						<td><%= f.label :password, "New password" %></td>
+						<td><%= f.password_field :password, :autofocus => true %></td>
+					</tr>
+					<tr>
+						<td><%= f.label :password_confirmation, "Confirm new password" %></td>
+						<td><%= f.password_field :password_confirmation %></td>
+					</tr>
+				</table>
 		
-		<div id='nav_form'>
-			<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-			<%= f.hidden_field :reset_password_token %>
-			<table>
-				<tr>
-					<td><%= f.label :password, "New password" %></td>
-					<td><%= f.password_field :password, :autofocus => true %></td>
-				</tr>
-				<tr>
-					<td><%= f.label :password_confirmation, "Confirm new password" %></td>
-					<td><%= f.password_field :password_confirmation %></td>
-				</tr>
-			</table>
-		
-			<% if resource.errors.any? %>
-				<div id="error_explanation">
-					<%= error_messages_for resource %>
-				</div>
-			<% end %>
+				<% if resource.errors.any? %>
+					<div id="error_explanation">
+						<%= error_messages_for resource %>
+					</div>
+				<% end %>
 			
-			<div id='change_pwd_button'>
-  				<%= f.submit "Change my password", :class => 'button5' %>
-  			</div>
+				<div id='change_pwd_button'>
+  					<%= f.submit "Change my password", :class => 'button5' %>
+  				</div>
   			
-			<% end %>
+				<% end %>
+			</div>
 		</div>
 	</div>
 </div>
