--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -194,6 +194,14 @@ a.button2:hover {
   background-color: #92d36e;
 }
 
+.button7 {
+  background-color: #e7f0fd;
+}
+
+a.button7:hover {
+  background-color: #ffffff;
+}
+
 .button3, .button6 {
   display:block;
   text-align:center;
