--- a/app/views/account/submit_readings.html.erb
+++ b/app/views/account/submit_readings.html.erb
@@ -1,6 +1,15 @@
 <div id='main'>
-	<h1>Is my blood pressure too high?</h1>
 	
-	<p>Congratulations! You have completed your set of blood pressure readings and are now ready to get personalised advice.</p>
-	<p>One of our doctors will look at your readings and contact you by email.</p>
+	<div id='strip1'>
+		<div id='strip1_content'>
+		</div>
+	</div>
+	
+	<div id='strip5'>
+		<div id='strip5_content'>
+			<p>Congratulations! You have completed your set of blood pressure readings and are now ready to get personalised advice.</p>
+			<p>One of our doctors will look at your readings and contact you by email.</p>
+		</div>
+	</div>
+	
 </div>
