--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,27 +63,13 @@
 				<%= link_to 'Home', info_home_page_path %>
 			</div>
 			<div class='topmenucontent'>
-				<%= link_to 'Features', root_path %>
+				<%= link_to 'Features', static_pages_features_path %>
 			</div>
 			<div class='topmenucontent'>
 				<%= link_to 'Contact', new_message_path %>
 			</div>
 			<% end %>
 			
-			<!--
-			<div class='topmenucontent'>
-				<a href=''>My medical details</a>
-			</div>
-			<div class='topmenucontent'>
-				<a href=''>My blood pressure readings</a>
-			</div>
-			<div class='topmenucontent'>
-				<a href=''>My blood test results</a>
-			</div>
-			<div class='topmenucontent'>
-				<a href=''>General advice</a>
-			</div>
-			-->
 		</div>
 		
 		<div class='clear_float'>
