--- a/app/views/account/home.html.erb
+++ b/app/views/account/home.html.erb
@@ -32,7 +32,7 @@
 				<p><%= average_bp_message(@average_sysbp, @average_diabp) %></p>
 			<% end %>
 	
-			<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this <span><%= time_left %></span>. This is because your blood pressure will vary from hour to hour, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from this site.</p>
+			<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this <span class='bold'><%= time_left %></span>. This is because your blood pressure will vary from hour to hour, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from this site.</p>
 			
 			<% if !user_signed_in? %>
 				<p id='feature_1'>You can be guided through this process by us... we'll make it easy.</p>
@@ -46,7 +46,7 @@
 	<div id='strip5'>
 		<div id='strip5_content'>
 			<% if user_signed_in? %>
-				<p id='return_notice'>Please come back to HomeBloodPressure.co.uk <span><%= when_next_bp_reading(@current_average_bp.ampm) %></span> to take another pair of blood pressure readings.</p>
+				<p id='return_notice'>Please come back to HomeBloodPressure.co.uk <span class='bold'><%= when_next_bp_reading(@current_average_bp.ampm) %></span> to take another pair of blood pressure readings.</p>
 			<% else %>
 				<%= render :partial => 'devise/registrations/new' %>
 			<% end %>
