--- a/app/views/account/readings_due.html.erb
+++ b/app/views/account/readings_due.html.erb
@@ -25,7 +25,7 @@
 				<% elsif @bp_entry_details[:bp_given] == 'skipped' %>
 					<p>OK. It is important to try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
 				<% else %>
-					<p><span>Welcome back <%= current_user.email %></span></p>
+					<p><span class='bigger'>Welcome back <%= current_user.email %></span></p>
 					<p>It's time to record some more blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure you'll get reliable advice. That way you will know whether your blood pressure really is too high.</p>
 				<% end %>
 			</div>
@@ -47,11 +47,12 @@
 				<p>Do you have a pair of blood pressure readings from <span><%= old_bp_datetime_text %></span> that you need to enter into your account?</p>
 				<div id='yes_no_buttons'>
 					<div id='no_button'>
-						<%= link_to 'No', account_is_bp_set_completable_path(@bp_entry_details), method: :post, :class => 'button1' %>
+						<%= link_to 'No', account_is_bp_set_completable_path(@bp_entry_details), method: :post, :class => 'button1 button7' %>
 					</div>
 					<div id='yes_button'>
 						<%= link_to 'Yes', new_current_bp_path(@bp_entry_details), :class => 'button1 button2' %>
 					</div>
+					<div class='clear_float'></div>
 				</div>
 			<% end %>
 		</div>
