--- a/app/views/info/info/treating_blood_pressure.html.erb
+++ b/app/views/info/info/treating_blood_pressure.html.erb
@@ -17,7 +17,7 @@
 		<div id='strip3_content'>
 			<h3>Treating blood pressure</h3>
 			<h4>How can HomeBloodPressure.co.uk help me treat my blood pressure?</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.</p>
+			<p>This site will tell you what the options are for treating your blood pressure. You’ll be able to see the benefits and disadvantages of any treatments that you may choose. By choosing to use our prescription delivery service you will get your prescriptions delivered to your door. You will be able to arrange to monitor your own blood pressure at a time that is convenient for you. You’ll be the one in charge of your treatment.</p>
 		</div>
 		
 		<div id='links'>
