--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,26 +1,37 @@
 <div id='main'>
-	<div id='about_us'>
-	<h1>About us</h1>
 	
-	<div class='about_us_box'>
-		<h3>Dr. Colin Coulthard</h3>
-		<p class='qualifications'>Mb BS, MRCGP</p>
-		<p class='gmcno'>GMC number: 4308740</p>
-		<p class='content'>Dr. Coulthard graduated from the University of London in 1996 and has been working as a GP since 2006. He currently practises in the London area.</p>
-	</div>
-	<div class='about_us_box'>
-		<h3>Dr. Richard Thomas</h3>
-		<p class='qualifications'>Mb ChB, MRCGP, DRCOG, DFFP</p>
-		<p class='gmcno'>GMC number: 4739854</p>
-		<p class='content'>Dr. Thomas graduated from the University of Leicester in 2000 and has been working as a GP since 2006. He currently practises in Derby and Nottingham.</p>
+	<div id='strip1'>
+		<div id='strip1_content'>
+			<% if !user_signed_in? %>
+				<h2>The best blood pressure treatment</h2>
+				<h3>FREE advice from UK GPs.</h3>
+				<h4>Online. Anytime.</h4>
+			<% end %>
+		</div>
 	</div>
 	
-	<div>
-		<p>HomeBloodPressure.co.uk is run by Dr. Colin Coulthard and Dr. Richard Thomas, two UK trained General Practitioners (GPs). We have many years experience of treating high blood pressure and are certain that there is a better way to organise it.</p>
-		<p>When working as GPs, our patients take time out of their busy days to come and see us for a simple blood pressure check, when they often have a perfectly good blood pressure monitor sat at home. All we then do is follow a set of rules to determine the best treatment for them and schedule any necessary further tests.</p>
-		<p class='indent'>So, why do people have to come down to our consulting rooms for this?</p>
-		<p class='indent'>Why can't most of this be automated to allow patients to get advice and prescriptions for their high blood pressure wherever and whenever they want?</p>
-		<p>And so HomeBloodPressure.co.uk was born. Coupled with your home blood pressure monitor, we will provide all the advice and prescriptions you need to control your blood pressure.</p>
+	<div id='strip3'>
+		<div id='strip3_content'>
+			<h3>About us</h3>
+			
+			<p class='name'>Dr. Colin Coulthard</p>
+			<p class='qualifications'>Mb BS, MRCGP</p>
+			<div class='clear_float'></div>
+			<p class='gmc_no'>GMC number: 4308740</p>
+			<p class='content'>Dr. Coulthard graduated from the University of London in 1996 and has been working as a GP since 2006. He currently practises in the London area.</p>
+			
+			<p class='name'>Dr. Richard Thomas</p>
+			<p class='qualifications'>Mb ChB, MRCGP, DRCOG, DFFP</p>
+			<div class='clear_float'></div>
+			<p class='gmc_no'>GMC number: 4739854</p>
+			<p class='content'>Dr. Thomas graduated from the University of Leicester in 2000 and has been working as a GP since 2006. He currently practises in Derby and Nottingham.</p>
+			
+			<p>HomeBloodPressure.co.uk is run by Dr. Colin Coulthard and Dr. Richard Thomas, two UK trained General Practitioners (GPs). We have many years experience of treating high blood pressure and are certain that there is a better way to organise it.</p>
+			<p>When working as GPs, our patients take time out of their busy days to come and see us for a simple blood pressure check, when they often have a perfectly good blood pressure monitor sat at home. All we then do is follow a set of rules to determine the best treatment for them and schedule any necessary further tests.</p>
+			<p class='indent'>So, why do people have to come down to our consulting rooms for this?</p>
+			<p class='indent'>Why can't most of this be automated to allow patients to get advice and prescriptions for their high blood pressure wherever and whenever they want?</p>
+			<p>And so HomeBloodPressure.co.uk was born. Coupled with your home blood pressure monitor, we will provide all the advice and prescriptions you need to control your blood pressure.</p>
+		</div>
 	</div>
-	</div>
+
 </div>
