--- a/app/views/info/info/what_is_blood_pressure.html.erb
+++ b/app/views/info/info/what_is_blood_pressure.html.erb
@@ -7,11 +7,13 @@
 		</div>
 	</div>
 	
+	<% if !user_signed_in? %>
 	<div id='strip2'>
 		<div id='strip2_content'>
 			<%= render 'info/is_my_bp_too_high' %>
 		</div>
 	</div>
+	<% end %>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
