--- a/app/views/info/info/home_page.html.erb
+++ b/app/views/info/info/home_page.html.erb
@@ -4,6 +4,7 @@
 			<h2>The best blood pressure treatment</h2>
 			<h3>FREE advice from UK GPs.</h3>
 			<h4>Online. Anytime.</h4>
+			<div class='clear_float'></div>
 		</div>
 	</div>
 	
