--- a/app/views/info/info/treating_blood_pressure.html.erb
+++ b/app/views/info/info/treating_blood_pressure.html.erb
@@ -1,9 +1,9 @@
 <div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h2>Your choice of blood pressure treatment</h2>
-			<h3>FREE advice from UK GPs.</h3>
-			<h4>Online. Anytime.</h4>
+			<h1>Your choice of blood pressure treatment</h1>
+			<p id='first'>FREE advice from UK GPs.</p>
+			<p id='second'>Online. Anytime.</p>
 		</div>
 	</div>
 	
@@ -17,8 +17,8 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h3>Treating blood pressure</h3>
-			<h4>How can HomeBloodPressure.co.uk help me treat my blood pressure?</h4>
+			<h2>Treating blood pressure</h2>
+			<h3>How can HomeBloodPressure.co.uk help me treat my blood pressure?</h3>
 			<p>This site will tell you what the options are for treating your blood pressure. You’ll be able to see the benefits and disadvantages of any treatments that you may choose. By choosing to use our prescription delivery service you will get your prescriptions delivered to your door. You will be able to arrange to monitor your own blood pressure at a time that is convenient for you. You’ll be the one in charge of your treatment.</p>
 		</div>
 		
