--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,22 +1,22 @@
 body {
   background-color: #fff;
-  color: #333;
+  //color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
-  //font-size: 100%;
-  //line-height: 18px;
-  //margin: 0px;
+  font-size: 100%;
+  line-height: 18px;
+  margin: 0px;
 }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
+  font-size: 1em;
   line-height: 18px;
 }
 
 pre {
   background-color: #eee;
   padding: 10px;
-  font-size: 11px;
+  font-size: 0.8em;
 }
 
 a:link, a:visited {
@@ -92,7 +92,7 @@ a:hover {
 
 #header_content {
   width: 90%;
-  max-width: 1000px;
+  //max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   background-color:#033076;
@@ -100,10 +100,10 @@ a:hover {
 
 #topbannertitle {
   float:left;
-  margin: 0px 50px 5px 0px;
+  margin: 5px 50px 5px 0px;
   
   a {
-    font-size:2em;
+    font-size:1.6em;
     
     &:link, &:hover, &:visited {
       color:#ffffff;
