--- a/app/views/info/info/home_page.html.erb
+++ b/app/views/info/info/home_page.html.erb
@@ -1,9 +1,9 @@
 <div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h2>The best blood pressure treatment</h2>
-			<h3>FREE advice from UK GPs.</h3>
-			<h4>Online. Anytime.</h4>
+			<h1>The best blood pressure treatment</h1>
+			<p id='first'>FREE advice from UK GPs.</p>
+			<p id='second'>Online. Anytime.</p>
 			<div class='clear_float'></div>
 		</div>
 	</div>
@@ -18,7 +18,7 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h3>Information and advice</h3>
+			<h2>Information and advice</h2>
 			<p>By using this site you’ll be getting clear information about your blood pressure. You’ll get up to date personalised advice from UK GPs. You’ll be able to use this information whenever you want, without the hassle of having to get an appointment at your doctors.</p>
 		</div>
 		
