--- a/app/views/info/info/measuring_blood_pressure.html.erb
+++ b/app/views/info/info/measuring_blood_pressure.html.erb
@@ -1,9 +1,10 @@
 <div id='main'>
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h2>How you can measure your blood pressure</h2>
-			<h3>FREE advice from UK GPs.</h3>
-			<h4>Online. Anytime.</h4>
+			<h1>How you can measure your blood pressure</h1>
+			<p id='first'>FREE advice from UK GPs.</p>
+			<p id='second'>Online. Anytime.</p>
+			<div class='clear_float'></div>
 		</div>
 	</div>
 	
@@ -17,26 +18,26 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h3>Measuring blood pressure</h3>
-			<h4>How can HomeBloodPressure.co.uk help me monitor my blood pressure?</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.</p>
+			<h2>Measuring blood pressure</h2>
+			<h3>How can HomeBloodPressure.co.uk help me monitor my blood pressure?</h3>
+			<p>Text advising people how our website can help them monitor their blood pressure.</p>
 		</div>
 		
 		<div id='links'>
 			<%= link_to(info_how_do_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>How do I measure my blood pressure?</span></span>
 				<%= image_tag("heart_bp_monitor_small.jpg") %>
-				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
+				<span class='link_text'>Text containing the sorts of questions people may have about how to measure their blood pressure.</span>
 			<% end %>
 			<%= link_to(info_when_should_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>When should I measure my blood pressure?</span></span>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
-				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
+				<span class='link_text'>Text containing the sorts of questions people may have about when to measure their blood pressure.</span>
 			<% end %>
 			<%= link_to(info_how_do_i_choose_a_blood_pressure_machine_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>How do I choose a blood pressure machine?</span></span>
 				<%= image_tag("tablets_small.jpg") %>
-				<span class='link_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</span>
+				<span class='link_text'>Text containing the sorts of questions people may have about how to choose a blood pressure machine.</span>
 			<% end %>
 			
 			<div class='clear_float'>
