--- a/app/views/static_pages/features.html.erb
+++ b/app/views/static_pages/features.html.erb
@@ -2,15 +2,16 @@
 	
 	<div id='strip1'>
 		<div id='strip1_content'>
-			<h2>The best blood pressure treatment</h2>
-			<h3>FREE advice from UK GPs.</h3>
-			<h4>Online. Anytime.</h4>
+			<h1>The best blood pressure treatment</h1>
+			<p id='first'>FREE advice from UK GPs.</p>
+			<p id='second'>Online. Anytime.</p>
+			<div class='clear_float'></div>
 		</div>
 	</div>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h3>Features</h3>
+			<h2>Features</h2>
 			<p>You'll get clear information about your blood pressure.</p>
 			<p>You’ll get up to date, personalised advice from UK GPs.</p>
 			<p>You’ll be able to use this information whenever you want, without the hassle of having to get an appointment at your doctors.</p>
