--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -1,18 +1,19 @@
 <div id='main'>
 	
 	<div id='strip1'>
-		<div id='strip1_content'>
-			<% if !user_signed_in? %>
-				<h2>The best blood pressure treatment</h2>
-				<h3>FREE advice from UK GPs.</h3>
-				<h4>Online. Anytime.</h4>
-			<% end %>
-		</div>
+		<% if !user_signed_in? %>
+			<div id='strip1_content'>
+				<h1>The best blood pressure treatment</h1>
+				<p id='first'>FREE advice from UK GPs.</p>
+				<p id='second'>Online. Anytime.</p>
+				<div class='clear_float'></div>
+			</div>
+		<% end %>
 	</div>
 	
 	<div id='strip2'>
 		<div id='strip2_content'>
-			<h3>Is my blood pressure too high?</h3>
+			<h2>Is my blood pressure too high?</h2>
 			
 			<% if @bp_entry_details[:reading_no] == '1' %>
 				<% if old_bp_datetime_text == "" %>
