--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,20 +1,21 @@
 <div id='main'>
 	
 	<div id='strip1'>
-		<div id='strip1_content'>
-			<% if !user_signed_in? %>
-				<h2>The best blood pressure treatment</h2>
-				<h3>FREE advice from UK GPs.</h3>
-				<h4>Online. Anytime.</h4>
-			<% end %>
-		</div>
+		<% if !user_signed_in? %>
+			<div id='strip1_content'>
+				<h1>The best blood pressure treatment</h1>
+				<p id='first'>FREE advice from UK GPs.</p>
+				<p id='second'>Online. Anytime.</p>
+				<div class='clear_float'></div>
+			</div>
+		<% end %>
 	</div>
 	
 	<div id='strip5'>
 		<div id='strip5_content'>
 			<div id='nav_form'>
 				
-				<h4>Change your password</h4>
+				<h2>Change your password</h2>
 				
 				<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
 				<%= f.hidden_field :reset_password_token %>
