--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,18 +1,19 @@
 <div id='main'>
 	
 	<div id='strip1'>
-		<div id='strip1_content'>
-			<% if !user_signed_in? %>
-				<h2>The best blood pressure treatment</h2>
-				<h3>FREE advice from UK GPs.</h3>
-				<h4>Online. Anytime.</h4>
-			<% end %>
-		</div>
+		<% if !user_signed_in? %>
+			<div id='strip1_content'>
+				<h1>The best blood pressure treatment</h1>
+				<p id='first'>FREE advice from UK GPs.</p>
+				<p id='second'>Online. Anytime.</p>
+				<div class='clear_float'></div>
+			</div>
+		<% end %>
 	</div>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h3>Contact us</h3>
+			<h2>Contact us</h2>
 			
 			<p>Please use the form below to contact us with any queries. However, be aware that although we frequently check for messages, this service is not able to provide any emergency medical advice. If you are feeling seriously unwell then please seek medical attention with your local doctor and do not await a response from us.</p>
 
