--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,18 +1,19 @@
 <div id='main'>
 	
 	<div id='strip1'>
-		<div id='strip1_content'>
-			<% if !user_signed_in? %>
-				<h2>The best blood pressure treatment</h2>
-				<h3>FREE advice from UK GPs.</h3>
-				<h4>Online. Anytime.</h4>
-			<% end %>
-		</div>
+		<% if !user_signed_in? %>
+			<div id='strip1_content'>
+				<h1>The best blood pressure treatment</h1>
+				<p id='first'>FREE advice from UK GPs.</p>
+				<p id='second'>Online. Anytime.</p>
+				<div class='clear_float'></div>
+			</div>
+		<% end %>
 	</div>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h3>About us</h3>
+			<h2>About us</h2>
 			
 			<p class='name'>Dr. Colin Coulthard</p>
 			<p class='qualifications'>Mb BS, MRCGP</p>
@@ -25,6 +26,8 @@
 			<div class='clear_float'></div>
 			<p class='gmc_no'>GMC number: 4739854</p>
 			<p class='content'>Dr. Thomas graduated from the University of Leicester in 2000 and has been working as a GP since 2006. He currently practises in Derby and Nottingham.</p>
+			
+			<br />
 			
 			<p>HomeBloodPressure.co.uk is run by Dr. Colin Coulthard and Dr. Richard Thomas, two UK trained General Practitioners (GPs). We have many years experience of treating high blood pressure and are certain that there is a better way to organise it.</p>
 			<p>When working as GPs, our patients take time out of their busy days to come and see us for a simple blood pressure check, when they often have a perfectly good blood pressure monitor sat at home. All we then do is follow a set of rules to determine the best treatment for them and schedule any necessary further tests.</p>
